--- a/src/main/resources/config/handler.yml
+++ b/src/main/resources/config/handler.yml
@@ -66,7 +66,7 @@ handlers:
   - com.networknt.controller.handler.ServicesDeleteHandler
   - com.networknt.controller.handler.ServicesGetHandler
   - com.networknt.controller.handler.ServicesCheckPutHandler
-  - com.networknt.controller.handler.ServicesInfoServiceIdGetHandler
+  - com.networknt.controller.handler.ServicesInfoNodeGetHandler
 
 
 chains:
@@ -104,11 +104,11 @@ paths:
     exec:
       - default
       - com.networknt.controller.handler.ServicesCheckPutHandler
-  - path: '/services/info/{serviceId}'
+  - path: '/services/info/{node}'
     method: 'GET'
     exec:
       - default
-      - com.networknt.controller.handler.ServicesInfoServiceIdGetHandler
+      - com.networknt.controller.handler.ServicesInfoNodeGetHandler
 
   - path: '/health/${server.serviceId:com.networknt.controller-1.0.0}'
     method: 'get'
