--- a/src/main/resources/config/service.yml
+++ b/src/main/resources/config/service.yml
@@ -7,7 +7,8 @@ singletons:
   
 # ShutdownHookProvider implementations, there are one to many and they are called in the same sequence defined.
 - com.networknt.server.ShutdownHookProvider:
-  
+    - com.networknt.controller.ControllerShutdownHook
+
   
 
 
