fixes #15 add websocket, vew and path resource

--- a/pom.xml
+++ b/pom.xml
@@ -190,7 +190,12 @@
             <artifactId>specification</artifactId>
             <version>${version.light-4j}</version>
         </dependency>
-        
+        <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>resource</artifactId>
+            <version>${version.light-4j}</version>
+        </dependency>
+
         
         
         <dependency>
