fixes #18 add basic authentication for the view and service

--- a/pom.xml
+++ b/pom.xml
@@ -147,7 +147,7 @@
         </dependency>
         <dependency>
             <groupId>com.networknt</groupId>
-            <artifactId>consul</artifactId>
+            <artifactId>basic-auth</artifactId>
             <version>${version.light-4j}</version>
         </dependency>
         <dependency>
