--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -28,4 +28,6 @@ ENV PATH="$PATH:$JAVA_MINIMAL/bin"
 
 COPY --from=packager "$JAVA_MINIMAL" "$JAVA_MINIMAL"
 COPY /target/controller-1.0.0.jar server.jar
+COPY /view/build /build
+COPY /config /config
 CMD ["/bin/sh","-c","java -Dlight-4j-config-dir=/config -Dlogback.configurationFile=/config/logback.xml -jar /server.jar"]
