--- a/view/package.json
+++ b/view/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-schema-form": "^0.9.10",
+    "react-schema-form-rc-select": "^0.3.18",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
