fixes #35 update the resource alias in the handler.yml as there is a typo

--- a/src/main/resources/config/handler.yml
+++ b/src/main/resources/config/handler.yml
@@ -61,7 +61,7 @@ handlers:
   - com.networknt.info.ServerInfoGetHandler@info
   - com.networknt.specification.SpecDisplayHandler@spec
   - com.networknt.specification.SpecSwaggerUIHandler@swaggerui
-  - com.networknt.resource.PathResourceHandler@resource@resource
+  - com.networknt.resource.PathResourceHandler@resource
   # - com.networknt.metrics.prometheus.PrometheusGetHandler@getprometheus
   # Business Handlers
   - com.networknt.controller.handler.ServicesPostHandler
