--- a/src/main/resources/config/client.yml
+++ b/src/main/resources/config/client.yml
@@ -46,6 +46,15 @@ oauth:
     # token service unique id for OAuth 2.0 provider. If server_url is not set above,
     # a service discovery action will be taken to find an instance of token service.
     serviceId: ${client.tokenServiceId:com.networknt.oauth2-token-1.0.0}
+    # For users who leverage SaaS OAuth 2.0 provider from lightapi.net or others in the public cloud
+    # and has an internal proxy server to access code, token and key services of OAuth 2.0, set up the
+    # proxyHost here for the HTTPS traffic. This option is only working with server_url and serviceId
+    # below should be commented out. OAuth 2.0 services cannot be discovered if a proxy server is used.
+    # proxyHost: ${client.tokenProxyHost:proxy.lightapi.net}
+    # We only support HTTPS traffic for the proxy and the default port is 443. If your proxy server has
+    # a different port, please specify it here. If proxyHost is available and proxyPort is missing, then
+    # the default value 443 is going to be used for the HTTP connection.
+    # proxyPort: ${client.tokenProxyPort:3128}
     # set to true if the oauth2 provider supports HTTP/2
     enableHttp2: ${client.tokenEnableHttp2:true}
     # the following section defines uri and parameters for authorization code grant type
@@ -94,11 +103,6 @@ oauth:
       # - petstore.w
     # light-oauth2 key distribution endpoint configuration for token verification
     key:
-      # use the proxyHost and proxyPort if the OAuth 2.0 provider is on the cloud and the
-      # server resides in side an organization with a proxy to the cloud service.
-      # proxyHost: ${client.tokenCcProxyHost:proxy.example.com}
-      # proxyPort: ${client.tokenCcProxyPort:8443}
-      # token endpoint for client credentials grant
       # key distribution server url for token verification. It will be used if it is configured.
       # If it is not set, a service lookup will be taken with serviceId to find an instance.
       # server_url: ${client.tokenKeyServerUrl:https://localhost:6886}
