--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <version.slf4j>1.7.25</version.slf4j>
         <version.jose4j>0.6.3</version.jose4j>
         <version.logback>1.2.3</version.logback>
+		<version.logstash>6.4</version.logstash>
         <version.junit>4.13.1</version.junit>
         <version.undertow>2.2.4.Final</version.undertow>
         <version.json-schema-validator>1.0.49</version.json-schema-validator>
@@ -222,6 +223,41 @@
             <groupId>io.undertow</groupId>
             <artifactId>undertow-core</artifactId>
             <version>${version.undertow}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>${version.logstash}</version>
+		</dependency>
+        <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>logger-config</artifactId>
+            <version>${version.light-4j}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>latency-assault</artifactId>
+            <version>${version.light-4j}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>memory-assault</artifactId>
+            <version>${version.light-4j}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>exception-assault</artifactId>
+            <version>${version.light-4j}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>killapp-assault</artifactId>
+            <version>${version.light-4j}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>chaos-monkey</artifactId>
+            <version>${version.light-4j}</version>
         </dependency>
         
         
