--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.main.class>com.networknt.server.Server</project.main.class>
         <version.light-4j>2.0.30-SNAPSHOT</version.light-4j>
-        <version.jackson>2.12.1</version.jackson>
+        <version.jackson>2.10.5</version.jackson>
         <version.slf4j>1.7.25</version.slf4j>
         <version.jose4j>0.6.3</version.jose4j>
         <version.logback>1.2.3</version.logback>
-		<version.logstash>6.4</version.logstash>
+		<version.logstash>6.5</version.logstash>
         <version.junit>4.13.1</version.junit>
         <version.undertow>2.2.4.Final</version.undertow>
         <version.json-schema-validator>1.0.49</version.json-schema-validator>
@@ -196,9 +196,31 @@
             <artifactId>resource</artifactId>
             <version>${version.light-4j}</version>
         </dependency>
-
-        
-        
+        <dependency>
+            <groupId>net.lightapi</groupId>
+            <artifactId>portal-event</artifactId>
+            <version>${version.light-4j}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.lightapi</groupId>
+            <artifactId>common-util</artifactId>
+            <version>${version.light-4j}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.lightapi</groupId>
+            <artifactId>command-common</artifactId>
+            <version>${version.light-4j}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>kafka-common</artifactId>
+            <version>${version.light-4j}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>kafka-producer</artifactId>
+            <version>${version.light-4j}</version>
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
