--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
     <artifactId>controller</artifactId>
     <packaging>jar</packaging>
     <name>controller</name>
-    <version>2.0.30</version>
+    <version>2.0.31-SNAPSHOT</version>
 
     <properties>
         <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.main.class>com.networknt.server.Server</project.main.class>
-        <version.light-4j>2.0.30</version.light-4j>
+        <version.light-4j>2.0.31-SNAPSHOT</version.light-4j>
         <version.jackson>2.12.1</version.jackson>
         <version.slf4j>1.7.25</version.slf4j>
         <version.jose4j>0.6.3</version.jose4j>
