fixes #56 implement raft consensus using Kafka streams between controlller nodes

--- a/pom.xml
+++ b/pom.xml
@@ -222,6 +222,11 @@
             <version>${version.light-4j}</version>
         </dependency>
         <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>kafka-streams</artifactId>
+            <version>${version.light-4j}</version>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${version.jackson}</version>
