--- a/src/main/resources/config/kafka-producer.yml
+++ b/src/main/resources/config/kafka-producer.yml
@@ -42,7 +42,7 @@ properties:
 
 # The default topic for the producer. Only certain producer implementation will use it.
 topic: ${kafka-producer.topic:portal-event}
-# If open tracing is enable. traceability, correlation and metrics should not be in the chain if opentracing is used.
+# If open tracing is enabled. traceability, correlation and metrics should not be in the chain if opentracing is used.
 injectOpenTracing: ${kafka-producer.injectOpenTracing:false}
 # Inject serviceId as callerId into the http header for metrics to collect the caller. The serviceId is from server.yml
 injectCallerId: ${kafka-producer.injectCallerId:false}
