fixes #56 switch to sidecar producer, complete register stream and update handlers

--- a/src/main/resources/config/kafka-producer.yml
+++ b/src/main/resources/config/kafka-producer.yml
@@ -15,10 +15,10 @@ properties:
   enable.idempotence: ${kafka-producer.enable.idempotence:true}
   # Transactional producer configuration
   # The TransactionalId to use for transactional delivery.
-  transactional.id: ${kafka-producer.transactional.id:T1000}
+  # transactional.id: ${kafka-producer.transactional.id:T1000}
   # The maximum amount of time in ms that the transaction coordinator will wait for a transaction status
   # update from the producer before proactively aborting the ongoing transaction. Default to 1 minute.
-  transaction.timeout.ms: ${kafka-producer.transaction.timeout.ms:60000}
+  # transaction.timeout.ms: ${kafka-producer.transaction.timeout.ms:60000}
   # The time in ms that the transaction coordinator will wait without receiving any transaction status
   # updates for the current transaction before expiring its transactional id. Default to 7 days.
   # transactional.id.expiration.ms: ${kafka-producer.transactional.id.expiration.ms:604800000}
