fixes #56 send create and delete task definition to the light-scheduler topic

--- a/pom.xml
+++ b/pom.xml
@@ -286,7 +286,12 @@
             <artifactId>chaos-monkey</artifactId>
             <version>${version.light-4j}</version>
         </dependency>
-        
+        <dependency>
+            <groupId>net.lightapi</groupId>
+            <artifactId>portal-event</artifactId>
+            <version>${version.light-4j}</version>
+        </dependency>
+
         
         
         
