fixes #56 add HealthCheckStreams

--- a/config/node1/values.yml
+++ b/config/node1/values.yml
@@ -1,3 +1,4 @@
+controller.clusterMode: false
 server.serviceId: com.networknt.controller-1.0.0
 server.httpsPort: 8431
 kafka-producer.transactional.id: T1001
