--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <version.slf4j>1.7.25</version.slf4j>
         <version.jose4j>0.6.3</version.jose4j>
         <version.logback>1.2.3</version.logback>
-		<version.logstash>6.4</version.logstash>
+		<version.logstash>6.5</version.logstash>
         <version.junit>4.13.1</version.junit>
         <version.undertow>2.2.4.Final</version.undertow>
         <version.json-schema-validator>1.0.49</version.json-schema-validator>
@@ -196,9 +196,36 @@
             <artifactId>resource</artifactId>
             <version>${version.light-4j}</version>
         </dependency>
-
-        
-        
+        <dependency>
+            <groupId>net.lightapi</groupId>
+            <artifactId>portal-event</artifactId>
+            <version>${version.light-4j}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.lightapi</groupId>
+            <artifactId>common-util</artifactId>
+            <version>${version.light-4j}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.lightapi</groupId>
+            <artifactId>command-common</artifactId>
+            <version>${version.light-4j}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>kafka-common</artifactId>
+            <version>${version.light-4j}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>kafka-producer</artifactId>
+            <version>${version.light-4j}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>kafka-streams</artifactId>
+            <version>${version.light-4j}</version>
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -259,7 +286,7 @@
             <artifactId>chaos-monkey</artifactId>
             <version>${version.light-4j}</version>
         </dependency>
-        
+
         
         
         
