--- a/src/main/resources/config/service.yml
+++ b/src/main/resources/config/service.yml
@@ -1,15 +1,12 @@
-
 # Singleton service factory configuration/IoC injection
 singletons:
 # StartupHookProvider implementations, there are one to many and they are called in the same sequence defined.
 - com.networknt.server.StartupHookProvider:
-    - com.networknt.controller.ControllerStartupHook
+  - com.networknt.controller.ControllerStartupHook
   
 # ShutdownHookProvider implementations, there are one to many and they are called in the same sequence defined.
 - com.networknt.server.ShutdownHookProvider:
-    - com.networknt.controller.ControllerShutdownHook
+  - com.networknt.controller.ControllerShutdownHook
 
-  
-
-
-
+- com.networknt.kafka.producer.NativeLightProducer:
+  - com.networknt.kafka.producer.SidecarProducer
