fixes #57 update the cluster nodes config with cluster enabled

--- a/config/node1/values.yml
+++ b/config/node1/values.yml
@@ -1,4 +1,3 @@
-controller.clusterMode: false
+controller.clusterMode: true
 server.serviceId: com.networknt.controller-1.0.0
 server.httpsPort: 8431
-kafka-producer.transactional.id: T1001
