--- a/config/node2/values.yml
+++ b/config/node2/values.yml
@@ -1,3 +1,3 @@
+controller.clusterMode: true
 server.serviceId: com.networknt.controller-1.0.0
 server.httpsPort: 8432
-kafka-producer.transactional.id: T1002
