--- a/src/main/resources/config/kafka-producer.yml
+++ b/src/main/resources/config/kafka-producer.yml
@@ -27,21 +27,32 @@ properties:
   # Schema registry identity cache size
   schema.registry.cache: ${kafka-producer.schema.registry.cache:100}
   # Schema registry client truststore location, use the following two properties only if schema registry url is https.
-  # schema.registry.ssl.truststore.location: ${kafka-producer.schema.registry.ssl.truststore.location:/config/client.truststore}
+  schema.registry.ssl.truststore.location: ${kafka-producer.schema.registry.ssl.truststore.location:/config/client.truststore}
   # Schema registry client truststore password
-  # schema.registry.ssl.truststore.password: ${kafka-producer.schema.registry.ssl.truststore.password:password}
+  schema.registry.ssl.truststore.password: ${kafka-producer.schema.registry.ssl.truststore.password:password}
   # security configuration for enterprise deployment
-  # security.protocol: ${kafka-producer.security.protocol:SASL_SSL}
-  # sasl.mechanism: ${kafka-producer.sasl.mechanism:PLAIN}
-  # sasl.jaas.config: "org.apache.kafka.common.security.plain.PlainLoginModule required username=\"${kafka-producer.username:username}\" password=\"${kafka-producer.password:password}\";"
-  # ssl.endpoint.identification.algorithm: ${kafka-producer.ssl.endpoint.identification.algorithm:algo-name}
-  # client.rack: ${kafka-producer.client.rack:rack-name}
+  security.protocol: ${kafka-producer.security.protocol:SASL_SSL}
+  sasl.mechanism: ${kafka-producer.sasl.mechanism:PLAIN}
+  sasl.jaas.config: "org.apache.kafka.common.security.plain.PlainLoginModule required username=\"${kafka-producer.username:username}\" password=\"${KAFKA_PRODUCER_PASSWORD:password}\";"
+  ssl.endpoint.identification.algorithm: ${kafka-producer.ssl.endpoint.identification.algorithm:algo-name}
+
+  ssl.truststore.location: ${kafka-producer.ssl.truststore.location:/config/kafka.server.truststore.jks}
+  ssl.truststore.password: ${kafka-producer.ssl.truststore.password:changeme}
+
+  # Apache Kafka 2.3 clients or later will then read from followers that have matching broker.rack as the specified client.rack ID.
+  client.rack: ${kafka-producer.client.rack:rack-name}
   # basic authentication user:pass for the schema registry
-  # basic.auth.user.info: ${kafka-producer.username:username}:${kafka-producer.password:password}
-  # basic.auth.credentials.source: ${kafka-producer.basic.auth.credentials.source:USER_INFO}
+  basic.auth.user.info: ${kafka-producer.username:username}:${KAFKA_PRODUCER_PASSWORD:password}
+  basic.auth.credentials.source: ${kafka-producer.basic.auth.credentials.source:USER_INFO}
+  # If you have message that is bigger than 1 MB to produce, increase this value.
+  max.request.size: ${kafka-producer.max.request.size:1048576}
 
 # The default topic for the producer. Only certain producer implementation will use it.
 topic: ${kafka-producer.topic:portal-event}
+# Default key format if no schema for the topic key
+keyFormat: ${kafka-producer.keyFormat:jsonschema}
+# Default value format if no schema for the topic value
+valueFormat: ${kafka-producer.valueFormat:jsonschema}
 # If open tracing is enabled. traceability, correlation and metrics should not be in the chain if opentracing is used.
 injectOpenTracing: ${kafka-producer.injectOpenTracing:false}
 # Inject serviceId as callerId into the http header for metrics to collect the caller. The serviceId is from server.yml
@@ -49,6 +60,6 @@ injectCallerId: ${kafka-producer.injectCallerId:false}
 # Indicator if the audit is enabled.
 auditEnabled: ${kafka-producer.auditEnabled:true}
 # Audit log destination topic or logfile. Default to topic
-auditTarget: ${kafka-producer.auditTarget:topic}
+auditTarget: ${kafka-producer.auditTarget:logfile}
 # The consumer audit topic name if the auditTarget is topic
 auditTopic: ${kafka-producer.auditTopic:sidecar-audit}
