--- a/config/local/values.yml
+++ b/config/local/values.yml
@@ -6,10 +6,10 @@ server.serviceId: com.networknt.controller-1.0.0
 controller.clusterMode: true
 
 # producer format configuration
-kafka-producer.bootstrap.servers: broker:29092
-kafka-producer.schema.registry.url: http://schema-registry:8081
+kafka-producer.bootstrap.servers: localhost:9092
+kafka-producer.schema.registry.url: http://localhost:8081
 
 # streams configuration
-kafka-streams.bootstrap.servers: broker:29092
-kafka-streams.schema.registry.url: http://schema-registry:8081
+kafka-streams.bootstrap.servers: localhost:9092
+kafka-streams.schema.registry.url: http://localhost:8081
 kafka-streams.cleanUp: false
