--- a/config/node3/values.yml
+++ b/config/node3/values.yml
@@ -1,3 +1,16 @@
-controller.clusterMode: true
+# server configuration
+server.httpsPort: 8440
 server.serviceId: com.networknt.controller-1.0.0
-server.httpsPort: 8433
+
+# controller configuration
+controller.clusterMode: true
+
+# producer format configuration
+kafka-producer.bootstrap.servers: broker:29092
+kafka-producer.schema.registry.url: http://schema-registry:8081
+
+# streams configuration
+kafka-streams.bootstrap.servers: broker:29092
+kafka-streams.schema.registry.url: http://schema-registry:8081
+kafka-streams.application.id: light-controller
+kafka-streams.cleanUp: false
