--- a/src/main/resources/config/handler.yml
+++ b/src/main/resources/config/handler.yml
@@ -83,6 +83,7 @@ handlers:
   - com.networknt.controller.handler.WebSocketHandler
   - com.networknt.controller.handler.ServicesLoggerGetHandler
   - com.networknt.controller.handler.ServicesLoggerPostHandler
+  - com.networknt.controller.handler.ServicesLoggerGetContentsHandler
   - com.networknt.controller.handler.ServicesChaosMonkeyGetHandler
   - com.networknt.controller.handler.ServicesChaosMonkeyPostHandler
   - com.networknt.controller.handler.ServicesChaosMonkeyAssaultPostHandler
@@ -180,6 +181,11 @@ paths:
     exec:
       - basic
       - com.networknt.controller.handler.ServicesLoggerGetHandler
+  - path: '/services/logger/contents'
+    method: 'GET'
+    exec:
+      - basic
+      - com.networknt.controller.handler.ServicesLoggerGetContentsHandler
   - path: '/services/logger'
     method: 'POST'
     exec:
