--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>controller</artifactId>
     <packaging>jar</packaging>
     <name>controller</name>
-    <version>2.0.33-SNAPSHOT</version>
+    <version>2.1.1-SNAPSHOT</version>
 
     <description>Light Controller</description>
     <url>https://github.com/networknt/light-controller</url>
@@ -52,7 +52,7 @@
         <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.main.class>com.networknt.server.Server</project.main.class>
-        <version.light-4j>2.0.33-SNAPSHOT</version.light-4j>
+        <version.light-4j>2.1.1-SNAPSHOT</version.light-4j>
         <version.jackson>2.12.1</version.jackson>
         <version.slf4j>1.7.32</version.slf4j>
         <version.jose4j>0.6.3</version.jose4j>
@@ -61,6 +61,7 @@
         <version.junit>4.13.1</version.junit>
         <version.undertow>2.2.14.Final</version.undertow>
         <version.json-schema-validator>1.0.65</version.json-schema-validator>
+        <version.yaml-rule>1.0.0</version.yaml-rule>
         <version.caffeine>2.8.6</version.caffeine>
         
         
@@ -81,7 +82,10 @@
     </properties>
 
     <repositories>
-
+        <repository>
+            <id>confluent</id>
+            <url>https://packages.confluent.io/maven/</url>
+        </repository>
         <repository>
             <id>sonatype-snapshots</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
@@ -224,6 +228,11 @@
         </dependency>
         <dependency>
             <groupId>com.networknt</groupId>
+            <artifactId>rule-loader</artifactId>
+            <version>${version.light-4j}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.networknt</groupId>
             <artifactId>server</artifactId>
             <version>${version.light-4j}</version>
         </dependency>
@@ -231,6 +240,11 @@
             <groupId>com.networknt</groupId>
             <artifactId>json-schema-validator</artifactId>
             <version>${version.json-schema-validator}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>yaml-rule</artifactId>
+            <version>${version.yaml-rule}</version>
         </dependency>
         <dependency>
             <groupId>com.networknt</groupId>
@@ -250,6 +264,11 @@
         <dependency>
             <groupId>com.networknt</groupId>
             <artifactId>openapi-validator</artifactId>
+            <version>${version.light-4j}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>access-control</artifactId>
             <version>${version.light-4j}</version>
         </dependency>
         <dependency>
