--- a/src/main/resources/config/handler.yml
+++ b/src/main/resources/config/handler.yml
@@ -45,7 +45,6 @@ handlers:
   - com.networknt.metrics.MetricsHandler@metrics
   - com.networknt.traceability.TraceabilityHandler@traceability
   - com.networknt.correlation.CorrelationHandler@correlation
-  # - com.networknt.basicauth.BasicAuthHandler@basic
   - com.networknt.openapi.OpenApiHandler@specification
   - com.networknt.openapi.JwtVerifyHandler@security
   - com.networknt.body.BodyHandler@body
@@ -70,6 +69,8 @@ handlers:
   - com.networknt.specification.SpecDisplayHandler@spec
   - com.networknt.specification.SpecSwaggerUIHandler@swaggerui
   # - com.networknt.metrics.prometheus.PrometheusGetHandler@getprometheus
+  # Business Middleware Handlers
+  - com.networknt.openapi.AccessControlHandler@access
   # Business Handlers
   - com.networknt.controller.handler.ServicesPostHandler
   - com.networknt.controller.handler.ServicesDeleteHandler
@@ -103,6 +104,7 @@ chains:
     - audit
     - sanitizer
     - validator
+    - access
 
 paths:
   - path: '/services'
