--- a/src/main/resources/config/service.yml
+++ b/src/main/resources/config/service.yml
@@ -3,7 +3,8 @@ singletons:
 # StartupHookProvider implementations, there are one to many and they are called in the same sequence defined.
 - com.networknt.server.StartupHookProvider:
   - com.networknt.controller.ControllerStartupHook
-  
+  - com.networknt.rule.RuleLoaderStartupHook
+
 # ShutdownHookProvider implementations, there are one to many and they are called in the same sequence defined.
 - com.networknt.server.ShutdownHookProvider:
   - com.networknt.controller.ControllerShutdownHook
