Added reload config files in control pane

--- a/src/main/resources/config/handler.yml
+++ b/src/main/resources/config/handler.yml
@@ -183,17 +183,16 @@ paths:
     exec:
       - default
       - com.networknt.controller.handler.ServicesLoggerPostHandler
-  - path: '/services/module'
+  - path: '/services/modules'
     method: 'GET'
     exec:
       - default
       - com.networknt.controller.handler.ServicesModuleGetHandler
-  - path: '/services/module'
+  - path: '/services/modules'
     method: 'POST'
     exec:
       - default
       - com.networknt.controller.handler.ServicesModulePostHandler
-
   - path: '/health/readiness/${server.serviceId:com.networknt.controller-1.0.0}'
     method: 'get'
     exec:
