initial code generation from the spec (#155)
* initial code generation from the spec

* Updated modules path

Co-authored-by: Steve Hu <stevehu@gmail.com>
Co-authored-by: Mayurika Saxena <mayurika.saxena@sunlife.com>

--- a/src/main/resources/config/handler.yml
+++ b/src/main/resources/config/handler.yml
@@ -89,6 +89,8 @@ handlers:
   - com.networknt.controller.handler.ServicesChaosMonkeyAssaultPostHandler
   - com.networknt.controller.handler.ServicesModuleGetHandler
   - com.networknt.controller.handler.ServicesModulePostHandler
+  - com.networknt.controller.handler.ServicesShutdownPostHandler
+
 
 chains:
   default:
@@ -232,6 +234,12 @@ paths:
     exec:
       - security
       - chaosget
+
+  - path: '/services/shutdown'
+    method: 'POST'
+    exec:
+      - default
+      - com.networknt.controller.handler.ServicesShutdownPostHandler
 
   - path: '/spec.yaml'
     method: 'get'
